syntax="proto3";

package genproto;
option go_package="genproto/billing_service";

message Account {
    int32 account_number = 1;
    string user_id = 2;
    string name = 3;
    string account_type_id = 4;
}

message CreateAccount {
    string user_id = 1;
    string name = 2;
    string account_type_id = 3;
}

message AccountNumber {
    int32 account_number = 1;
}

message GetAllAccountResponse {
    repeated Account accounts = 1;
    int32 count = 2;
}