syntax="proto3";

package genproto;
option go_package="genproto/user_service";

message Researcher {
    string id = 1;
    string name = 2;
    string email = 3;
    string phone = 4;
    string profession_title = 5;
    string role_id = 6;
}

message GetAllResearcherResponse {
    repeated Researcher researchers = 1;
    int32 count = 2;
}

message ResearcherId {
    string id = 1;
}